Support emulated sigreturn
This is deceptively simple. Just do the sigreturn, after resetting the
stack pointer to point to the relevant signal frame... in effect, the
syscall site is displaced (from the guest program's code, to ours) but
the call being made is exactly the same.

--- a/test/generic/Makefile
+++ b/test/generic/Makefile
@@ -15,4 +15,4 @@ $(filter-out clone,$(filter-out hello,$(ALLTESTS))): LDFLAGS += -nostdlib -nosta
 # while glibc bug 25486 is unresolved, we need to link in libc as well as just the ld.so :-(
 $(filter-out hello,$(ALLTESTS)): LDLIBS += $(LDSO) -Wl,--no-as-needed -lc
 
-sigreturn: ../../build/$(shell uname -m)/restorer.o
+sigreturn: ../../build/$(shell uname -m)/libsystrap.a
