--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
           command: |
             apt update
             apt install -y ca-certificates make build-essential g++ autoconf automake libtool \
-              libelf-dev python3 python git gawk python3-distutils libunwind-dev
+              libelf-dev python3 python git gawk python3-distutils libunwind-dev libunwind-dev:i386 gettext-base
       - attach_workspace:
           at: /root
       - run:
