--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
+            dpkg --add-architecture i386
             apt update
             apt install -y ca-certificates make build-essential g++ autoconf automake libtool \
               libelf-dev python3 python git gawk python3-distutils libunwind-dev libunwind-dev:i386 gettext-base
