.circleci: yet more of the same

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
             apt update
             apt install -y ca-certificates make build-essential g++ autoconf automake libtool \
               libelf-dev python3 python git gawk python3-distutils libunwind-dev libunwind-dev:i386 gettext-base \
-              linux-libc-dev-i386-cross
+              linux-libc-dev-i386-cross libc6-dev-i386
 
       - attach_workspace:
           at: /root
