--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,10 +51,10 @@ jobs:
           at: /root
       - run:
           name: Run tests (sequentially for now)
-          command: make -C /root/project/test ARCH=x86_64 generic-recursive 
-          command: make -C /root/project/test/x86_64
-          command: make -C /root/project/test/client
-          command: make -C /root/project/test/support
+          command: make -C /root/project/test ARCH=x86_64 generic-recursive && \
+                   make -C /root/project/test/x86_64 && \
+                   make -C /root/project/test/client && \
+                   make -C /root/project/test/support
           # CircleCI Docker doesn't support sigaction() on 32-bit x86?!!?
 
 workflows:
