--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = https://github.com/intelxed/mbuild.git
 [submodule "contrib/musl"]
 	path = contrib/musl
-	url = git://git.musl-libc.org/musl
+	url = https://git.musl-libc.org/git/musl
 [submodule "contrib/libx86emulate"]
         path = contrib/libx86emulate
         url = https://github.com/stephenrkell/libx86emulate.git
